<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F2F4">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="250dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="43dp"
        android:transitionName="transition_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="172dp"
        android:text="@string/Cadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="173dp"
        android:allowUndo="false"
        android:autoLink="none"
        android:autoText="true"
        android:linksClickable="true"
        android:text="@string/Cadastrar"
        android:textColor="#3276FF"
        android:textColorLink="#F7FF00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="108dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        android:shape="oval"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLogin"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="211dp"
            android:layout_height="35dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/Senha"
            android:inputType="text|textPassword"
            android:shape="oval"
            android:textAlignment="viewStart" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="53dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnLogar"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="#1437FB"
            android:ellipsize="start"
            android:onClick="validarLogin"
            android:text="@string/Logar"
            android:textColor="#FFFFFF" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="29dp"
        android:text="@string/Esquecer"
        app:layout_constraintEnd_toStartOf="@+id/txtRedefinir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtRedefinir"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="130dp"
        android:linksClickable="true"
        android:text="@string/Recuperar"
        android:textColor="#3276FF"
        android:textColorLink="#3276FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastrar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>